# dashengos

./: .gitignore  AGENTS.md  CHANGELOG-2026-06-22.md  DaShengOS-v0.3-前端深度解剖报告-2026-06-17.md  DaShengOS-v0.3-文档与代码对齐报告-2026-06-17.md  DaShengOS-v0.3-生产就绪审计报告-2026-06-17.md  DaShengOS-全面审计报告-2026-06-23.html  DaShengOS-冗余与连通性审计报告-2026-06-23.html  DaShengOS-完整性分析报告-2026-06-20.html  DaShengOS-审计报告-2026-06-22.html  DaShengOS-对话管理全面分析与改造指导-2026-06-17.md  DaShengOS-对齐Hermes落地执行方案v1-2026-06-17.md  DaShengOS-对齐Hermes设计哲学全面分析与改造指导-2026-06-17.md  DaShengOS-核心系统审计-2026-06-23.html  DaShengOS-端到端功能完整性检查报告-2026-06-18.md  P0-P5-CLOSURE-REPORT.md  README.md  STATE.md  STATUS.md  VENDORING.md  bjd_industry_report.html  install.sh  package-lock.json  package.json  pnpm-lock 2.yaml  pnpm-lock 4.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  restart.sh  save.sh  start.sh
.githooks/: pre-commit
agent/: __init__.py  brain.py  brain_factory.py  config.py  deerflow_brain.py  hermes_brain.py  main.py  requirements.txt
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/icons/: .gitkeep
apps/desktop/src-tauri/src/: lib.rs  main.rs
backups/: dasheng-20260617_013736.db
data/: dasheng.db  dasheng.db-shm  dasheng.db-wal
deerflow/: __init__.py  audit_bridge.py  credentials.py  daemon.py  hermes_adapter.py  ima_api.py  mcp_bridge.py  pyproject.toml
deerflow/agents/: __init__.py  __init_sub__.py  analyst.py  dispatcher.py  lead_agent.py  quality.py  researcher.py  security.py  writer.py
deerflow/tests/: __init__.py  test_run_sub_agent_e2e.py
deploy/: .env.production.example  Caddyfile  (+4 more)
(+302 files in other folders)
