[package]
name = "dasheng-desktop"
version = "0.3.0"
description = "DaShengOS Tauri 2.x desktop wrapper"
authors = ["DaSheng OS"]
edition = "2021"
rust-version = "1.74"

[lib]
name = "dasheng_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
